- [2021-03-26] Version =1.7.0=
  + Import from org-timer
  + Adjust timestamp offset
  + =org-media-note-goto-timestamp=
- [2021-02-26] Version =1.6.0=
  + Support online videos
  + Better support org-ref: bib file exported from calibre, zotero is supported
- [2021-02-20] Version =1.5.0=
  + open from org-attach
- [2021-02-17] Version =1.4.0=
  + Support A-B loop link
- [2021-02-16] Version =1.3.0=
  + add customization option for link text
  + allow auto pause after insert link
- [2021-02-03] Version =1.2.0=
  + improve hydra menu: more options, like control volume, save screenshot with sub or not
  + add help echo for videocite and audiocite link
- [2021-01-14] Version =1.1.0=
  + import from pbf and noted
- [2021-01-08] Version =1.0.0=
  + timestamp link for videos and audios
  + quick insert current timestamp, screenshot, subtitles
  + support org-ref